Polished CSS tab for it to be more comprehensive. Features part done. Corrections in HTML for it to be more readable.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,81 +3,67 @@
 $main-color: #5265E1;
 $secondary-color: #FA5959;
 
-$theme-colors: (
-  "primary": $main-color,
-  "danger": $secondary-color
-);
+.btn-primary {
+    background-color: $main-color;
+    border-color: $main-color;
+    &:hover {
+        background-color: darken($main-color, 10%);
+        border-color: darken($main-color, 10%);
+      }
+}
 
-.navbar {
-    .btn-danger {
-        border-radius: 6px;
+.btn-danger {
+    background-color: $secondary-color;
+    border-color: $secondary-color;
+    &:hover {
+        background-color: darken($secondary-color, 10%);
+        border-color: darken($secondary-color, 10%);
+    }
+}
+
+.hero-section {
+    padding: 100px 0;
+    h1 {
+        font-size: 3rem;
+        font-weight: bold;
+        max-width: 600px;
+    }
+    p {
+        font-size: 1.2rem;
+        color: #6c757d;
+        max-width: 600px;
     }
 
-    .container img {
-    max-width: 100%;
-    height: auto;
+    .left-column {
+        padding-top: 5em;
+        padding-left: 20em;
     }
-}
-
-.grid-title {
-    font-size: 2.5rem;
-    font-weight: 700;
-    text-align: left; 
 
 }
 
-.col-6 img {
-    max-width: 120%;  
-    height: auto;     
-    display: block;   
-    margin: 0 auto;   
-}
-
-.row {
-    margin-left: 2em;
-}
-
-.features {
-    padding-top: 5rem;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-    padding-left: 3em;
-    margin-top: 1em;
-}
-
-p {
-    max-width: 600px;
-    font-size: 1.1rem;
-    color: #6c757d;
-    margin-bottom: 2rem;
-}
-
-.hero-image {
-     width: 100%;
-     max-width: 400px;
-}
-
-.features-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-top: 4em;
-
+.features-section {
+    padding: 100px 0;
     h2 {
         font-size: 2.5rem;
         font-weight: bold;
-        margin-bottom: 0.5rem;
     }
-
-    .nav {
-        margin-top: 1.5rem;
+    p {
+        font-size: 1.2rem;
+        color: #6c757d;
+        max-width: 600px;
     }
-}
-
-.left-column {
-    padding-top: 7em;
+    .nav-tabs {
+        border: none;
+        margin-bottom: 4em;
+        .nav-link {
+            color: #6c757d;
+            &.active {
+                color: $main-color;
+            }
+        }
+    }
+    
+    img {
+        padding-left: 25em;
+    }
 }
